change to mobile base and follow tje base layout and fix tags overflow

--- a/static/src/sass/announcement/all.scss
+++ b/static/src/sass/announcement/all.scss
@@ -5,19 +5,20 @@
 
 
 .content {
-  padding: 2rem 4.5rem;
-  background-color: #f2f4f7;
   display: grid;
   grid: {
     gap: 1.5rem 0;
     template-columns: repeat( 10, 1fr );
   }
-  @media screen and ( max-width: 992px ){
+  background-color: #f2f4f7;
+  padding: 2.2rem 1rem;
+  @media screen and ( min-width: 768px ){
     padding: 4.6rem 3.6rem;
   }
-  @media screen and ( max-width: 768px ){
-    padding: 2.2rem 1rem;
+  @media screen and ( min-width: 992px ) {
+    padding: 2rem 4.5rem;
   }
+  
 }
 @include topic--black();
 
@@ -29,18 +30,19 @@
 }
 
 .filter {
-  grid-column: {
-    start: 2;
-    end: 10;
-  }
-  @media screen and ( max-width: 768px ){
-    display: none;
-    
-  }
-  @media screen and ( max-width: 992px ){
+  display: none;
+  @media screen and ( min-width: 768px ){
+    display: flex;
     grid-column: {
       start: 1;
       end: 11;
+    }
+  }
+  @media screen and ( min-width: 992px ){
+    display: flex;
+    grid-column: {
+      start: 2;
+      end: 10;
     }
   }
   
@@ -48,13 +50,13 @@
 
 .announcement {
   grid-column: {
-    start: 2;
-    end: 10;
+    start: 1;
+    end: 11;
   }
-  @media screen and ( max-width: 992px ){
+  @media screen and ( min-width: 992px ){
     grid-column: {
-      start: 1;
-      end: 11;
+      start: 2;
+      end: 10;
     }
   }
 }
